# traq_cli

./: Cargo.toml  traq.yaml
src/: main.rs
src/cmd/: channel.rs  message.rs  mod.rs
