[package]
name = "traq_cli"
version = "0.1.0"
authors = ["mazrean <shunsuke.w04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapi = { path = "generated" }
tokio = { version = "0.2", features = ["full"] }
clap = { git = "https://github.com/clap-rs/clap/" }
